# ems-simple-logger-config

./: README.md  setup.cfg
src/logger_config/: logger.py
