[metadata]
name = ems-simple-logger-config
version = 0.0.3
author = xemage
description = A simple file logger configuration for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xemage/ems-simple-logger-config
project_urls =
    Bug Tracker = https://github.com/xemage/ems-simple-logger-config/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
